test/parserTest/pass/test11.ic
class CS301 extends CSCore { 
    void catFun(){
        string ctz = "Fluffy";
    }
}
