test/parserTest/fail/test14.ic
class BadBinop {
	void main () {
		int x = 1 + * 3;
	}
}